[metadata]
name = aura
version = attr: aura.__version__
author = Martin Carnogursky
author-email = xcarnog@fi.muni.cz
url = https://github.com/RootLUG/aura
description = "Security aura for packages"
long-description = file: README.md
license = GPLv3
license-file = LICENSE.txt
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Security
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
zip_safe = false
python_requires = >= 3.7
test_require = pytest, pytest-cov

[options.packages.find]
exclude =
    files
    tests
    tests.*

[options.entry_points]
console_scripts =
    aura = aura.cli:main
    apip = aura.apip:main
aura.uri_handlers =
    pypi = aura.uri_handlers.pypi:PyPiHandler
    mirror = aura.uri_handlers.mirror:MirrorHandler
    local = aura.uri_handlers.local:LocalFileHandler

aura.analyzers =
    sensitive_files = aura.analyzers.fs_struct:analyze_sensitive
    suspicious_files = aura.analyzers.fs_struct:analyze_suspicious
    yara = aura.analyzers.yara_scan:analyze
    execution_flow = aura.analyzers.python.execution_flow:ExecutionFlow
    setup_py = aura.analyzers.setup:SetupPy
    data_finder = aura.analyzers.data_finder:DataFinder
    wheel = aura.analyzers.wheel:analyze_wheel
    crypto_gen_key = aura.analyzers.python.crypto:CryptoGenKey
    secrets = aura.analyzers.python.secrets:SecretsAnalyzer

[bdist_wheel]
universal = true

[sdist]
format = zip, gztar

[global]
verbose = 1
