[metadata]
name = aura
version = attr: aura.__version__
author = Martin Carnogursky
author-email = intense.feel@gmail.com
url = https://github.com/RootLUG/aura
description = "Security auditing and introspection for packages"
long-description = file: README.md
license = GPLv3
license-file = LICENSE.txt
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Security
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
include_package_data = true
zip_safe = false
python_requires = >= 3.7
test_require = pytest, pytest-cov

[options.packages.find]
exclude =
    files
    tests
    tests.*

[options.entry_points]
console_scripts =
    aura = aura.cli:main
    apip = aura.apip:main

aura.uri_handlers =
    pypi = aura.uri_handlers.pypi:PyPiHandler
    mirror = aura.uri_handlers.mirror:MirrorHandler
    git = aura.uri_handlers.git:GitRepoHandler
    local = aura.uri_handlers.local:LocalFileHandler

aura.ast_visitors =
    convert = aura.analyzers.python.convert_ast:ASTVisitor
    rewrite = aura.analyzers.python.rewrite_ast:ASTRewrite
    taint_analysis = aura.analyzers.python.taint.visitor:TaintAnalysis
    readonly = aura.analyzers.python.readonly:ReadOnlyAnalyzer

aura.output_handlers =
    text = aura.output.text:TextOutput
    sqlite = aura.output.sqlite:SQLiteOutput
    json = aura.output.json:JSONOutput

aura.diff_output_handlers =
    text = aura.output.text:TextDiffOutput
    json = aura.output.json:JSONDiffOutput

aura.analyzers =
    archive = aura.analyzers.archive:archive_analyzer
    sensitive_files = aura.analyzers.fs_struct:analyze_sensitive
    suspicious_files = aura.analyzers.fs_struct:analyze_suspicious
    req_analyzer = aura.analyzers.requirements_analyzer:analyze_requirements_file
    yara = aura.analyzers.yara_scan:analyze
    xml = aura.analyzers.xml:analyze
    function_calls = aura.analyzers.python.function_calls:FunctionCallAnalyzer
    execution_flow = aura.analyzers.python.execution_flow:ExecutionFlow
    setup_py = aura.analyzers.setup:SetupPy
    data_finder = aura.analyzers.data_finder:DataFinder
    string_finder = aura.analyzers.data_finder:StringFinder
    wheel = aura.analyzers.wheel:analyze_wheel
    jinja = aura.analyzers.python.jinja:JinjaAnalyzer
    sqli = aura.analyzers.python.sqli:SQLi
    misc = aura.analyzers.python.misc:MiscAnalyzer
    crypto_gen_key = aura.analyzers.python.crypto:CryptoGenKey
    secrets = aura.analyzers.python.secrets:SecretsAnalyzer
    taint_analysis = aura.analyzers.python.taint.base:TaintDetection
    stats = aura.analyzers.stats:analyze

aura.diff_hooks =
    diff_archive = aura.analyzers.archive:diff_archive

[bdist_wheel]
universal = true

[sdist]
format = zip, gztar

[global]
verbose = 1
